--- a/src/style/css/Header.scss
+++ b/src/style/css/Header.scss
@@ -1,6 +1,6 @@
 .Header {
   display: flex;
-  width: 50%;
+  width: 100%;
   height: 113px;
   margin: auto;
   flex-direction: column;
@@ -8,12 +8,11 @@
   align-items: center;
   justify-content: space-evenly;
 
-}
-
-.Header__logo {
-  width: 118px;
-  object-fit: contain;
-  opacity: 0.97;
+  &__logo {
+    width: 118px;
+    object-fit: contain;
+    opacity: 0.97;
+  }
 }
 
 /*# sourceMappingURL=Header.scss.map */
