--- a/src/style/css/Slider.css
+++ b/src/style/css/Slider.css
@@ -1,31 +1,31 @@
 .Slider {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-content: center;
 }
-
 .Slider__product {
   display: flex;
   flex-direction: column;
-  margin: 10px auto 10px 15px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
-
+.Slider__control {
+  z-index: 1;
+  display: flex;
+  height: 70px;
+  width: 70px;
+  background-color: rgba(221, 221, 221, 0.5);
+  justify-content: center;
+}
+.Slider__control .text {
+  align-self: center;
+}
+.Slider__control:hover {
+  background-color: rgba(221, 221, 221, 0.8);
+}
 .Slider__slider-image {
   width: 130px;
   height: 130px;
 }
-
-.Product__text {
-  object-fit: contain;
-  font-family: ComicSansMS, serif;
-  font-size: 13px;
-}
-
-.Product__price {
-  object-fit: contain;
-  font-family: ComicSansMS, serif;
-  font-size: 10px;
-}
-
-/*# sourceMappingURL=Slider.scss.map */
 
 /*# sourceMappingURL=Slider.css.map */
