--- a/src/style/css/Slider.scss
+++ b/src/style/css/Slider.scss
@@ -1,29 +1,34 @@
 .Slider {
   display: flex;
-  justify-content: center;
-}
+  justify-content: space-between;
+  align-content: center;
 
-.Slider__product {
-  display: flex;
-  flex-direction: column;
-  margin: 10px auto 10px 15px;
-}
+  &__product {
+    display: flex;
+    flex-direction: column;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 
-.Slider__slider-image {
-  width: 130px;
-  height: 130px;
-}
+  &__control {
+    z-index: 1;
+    display: flex;
+    height: 70px;
+    width: 70px;
+    background-color: rgba(#ddd, .5);
+    justify-content: center;
 
-.Product__text {
-  object-fit: contain;
-  font-family: ComicSansMS, serif;
-  font-size: 13px;
-}
+    .text {
+      align-self: center;
+    }
 
-.Product__price {
-  object-fit: contain;
-  font-family: ComicSansMS, serif;
-  font-size: 10px;
-}
+    &:hover {
+      background-color: rgba(#ddd, .8);
+    }
+  }
 
-/*# sourceMappingURL=Slider.scss.map */
+  &__slider-image {
+    width: 130px;
+    height: 130px;
+  }
+}
