--- a/src/style/css/common.css
+++ b/src/style/css/common.css
@@ -1,4 +1,8 @@
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
+
+/*# sourceMappingURL=common.scss.map */
+
+/*# sourceMappingURL=common.css.map */
