--- a/src/style/css/Slider.css
+++ b/src/style/css/Slider.css
@@ -1,10 +1,9 @@
 .Slider {
   display: flex;
-  justify-content: space-between;
-  align-content: center;
 }
 .Slider__product {
   display: flex;
+  justify-content: flex-start;
   flex-direction: column;
   margin-left: 5px;
   margin-right: 5px;
